[gd_scene load_steps=5 format=3 uid="uid://nwve1pgngy5n"]

[ext_resource type="Script" uid="uid://c7o5t8e8jhctg" path="res://scripts/Main.gd" id="1_rvslj"]
[ext_resource type="PackedScene" uid="uid://bkkngkccafcvr" path="res://scenes/Aim.tscn" id="2_0bbpv"]
[ext_resource type="Texture2D" uid="uid://dth5sd8j4d411" path="res://assets/green-board-bg.svg" id="2_rarhs"]
[ext_resource type="PackedScene" uid="uid://jb8enxtiwmif" path="res://scenes/Slot.tscn" id="3_0bbpv"]

[node name="Main" type="Node2D"]
script = ExtResource("1_rvslj")

[node name="Background" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background"]
z_index = -100
offset_right = 2560.0
offset_bottom = 1600.0
texture = ExtResource("2_rarhs")
expand_mode = 5

[node name="Slot" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(100, 150)
type = 0

[node name="Slot2" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(100, 300)
type = 1

[node name="Slot3" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(1100, 150)
type = 2

[node name="Slot4" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(1100, 300)
type = 2

[node name="Slot5" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(1100, 450)
type = 2

[node name="Slot6" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(1100, 600)
type = 2

[node name="Slot7" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(300, 150)

[node name="Slot8" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(400, 150)

[node name="Slot9" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(500, 150)

[node name="Slot10" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(600, 150)

[node name="Slot11" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(700, 150)

[node name="Slot12" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(800, 150)

[node name="Slot13" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(900, 150)

[node name="HUD" type="Node2D" parent="."]
z_index = 500

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
anchors_preset = -1
anchor_right = 0.031000001
anchor_bottom = 0.054
offset_left = 203.0
offset_top = 32.0
offset_right = 1052.32
offset_bottom = 55.878

[node name="ScoreLabel" type="Label" parent="HUD"]
offset_left = 556.0
offset_top = 30.0
offset_right = 692.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_font_sizes/font_size = 36
text = "Score: 0"

[node name="TimeLabel" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 692.0
offset_top = 30.0
offset_right = 1073.0
offset_bottom = 80.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_font_sizes/font_size = 36
text = "Time: 0"
horizontal_alignment = 1
autowrap_mode = 1

[node name="MovesLabel" type="Label" parent="HUD"]
offset_left = 1071.0
offset_top = 30.0
offset_right = 1224.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_font_sizes/font_size = 36
text = "Moves: 0"
horizontal_alignment = 1

[node name="btnUndo" type="ColorRect" parent="HUD" groups=["ui"]]
offset_left = 50.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 80.0
color = Color(0.5529556, 0.55295557, 0.55295557, 1)

[node name="Label" type="Label" parent="HUD/btnUndo" groups=["ui"]]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.06
anchor_top = -13.3
anchor_right = -2.06
anchor_bottom = -13.3
offset_left = 340.0
offset_top = 666.0
offset_right = 434.0
offset_bottom = 716.0
theme_override_font_sizes/font_size = 36
text = "Undo"

[node name="btnNew" type="ColorRect" parent="HUD" groups=["ui"]]
offset_left = 210.0
offset_top = 30.0
offset_right = 412.0
offset_bottom = 80.0
color = Color(0.5689727, 0.56897277, 0.5689727, 1)

[node name="Label" type="Label" parent="HUD/btnNew" groups=["ui"]]
layout_mode = 0
offset_left = 8.0
offset_right = 198.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 36
text = "New Game"

[node name="VictoryScreen" type="Node2D" parent="."]
visible = false
z_index = 2000

[node name="TextureRect" type="TextureRect" parent="VictoryScreen"]
z_index = -100
offset_right = 2560.0
offset_bottom = 1600.0
mouse_filter = 2
texture = ExtResource("2_rarhs")
expand_mode = 5

[node name="Label" type="Label" parent="VictoryScreen"]
offset_left = 500.0
offset_top = 250.0
offset_right = 771.0
offset_bottom = 338.0
theme_override_font_sizes/font_size = 64
text = "You Win!"

[node name="WinResetTimer" type="Timer" parent="VictoryScreen"]
one_shot = true
wait_time = 30.0

[node name="FinalScoreLabel" type="Label" parent="VictoryScreen"]
offset_left = 250.0
offset_top = 50.0
offset_right = 386.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_font_sizes/font_size = 36
text = "Score: 0"

[node name="FinalTimeLabel" type="Label" parent="VictoryScreen"]
offset_left = 550.0
offset_top = 50.0
offset_right = 675.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_font_sizes/font_size = 36
text = "Time: 0"

[node name="FinalMovesLabel" type="Label" parent="VictoryScreen"]
offset_left = 800.0
offset_top = 50.0
offset_right = 953.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_font_sizes/font_size = 36
text = "Moves: 0"
horizontal_alignment = 1

[node name="Aim" parent="." instance=ExtResource("2_0bbpv")]
z_index = 5000
